Fixed Nav bar Dropdown menu alignment
The drop down menu were not aligning properly with the tab heads so that
has now been fixed. I also adjust the navbar so that it scales better.

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -51,9 +51,14 @@ h2{
 	background-color: #808080;
 	border-radius:10px;
 	position:relative;
-	left: 18%;
+	left: 10%;
 	display:inline-table;
 	z-index: 1;
+	width: 80%;
+}
+
+.navBar ul li ul{
+	width: inherit;
 }
 
 .navBar ul:after{
@@ -66,6 +71,7 @@ h2{
 	float:left;
 	border-left: 1px solid #575f6a;
 	border-right: 1px solid #575f6a;
+	width: 15%;
 }
 
 .navBar li{
@@ -75,7 +81,6 @@ h2{
 
 .dropdownHead {
 	text-align:center;
-	padding:14px 16px;
 }
 
 
@@ -120,6 +125,7 @@ h2{
 	border-top: 1px solid #6b727c;
 	border-bottom: 1px solid #575f6a;
 	position:relative;
+	width: initial;
 }
 
 .navBar a:visited, a:link{
@@ -128,6 +134,7 @@ h2{
 
 #navBegin{
 	border-left: 2px solid #575f6a;
+	margin-left: 4%;
 }
 
 #navEnd{
@@ -135,6 +142,9 @@ h2{
 }
 
 #gitSubNav{
-	left:40%;
+	left:49.5%;
 }
+
+#projectSubNav{
+	left:19.7%;
 /*<--NavBar CCS Ends -->*/
